k8s/deployment.yaml
# k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: devops-portfolio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: sudomyous/myapp:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /app/config/settings.yaml
          subPath: settings.yaml
      volumes:
      - name: config-volume
        configMap:
          name: app-config
